--- a/match-app/src/Pages/Profile/Profile.module.css
+++ b/match-app/src/Pages/Profile/Profile.module.css
@@ -11,12 +11,82 @@
     border: 1px solid #333;
 }
 
-.value {
-    font-size: 1.3rem;
-
+.photo {
+    width: 12rem;
+    height: 12rem;
+    margin: 2rem auto;
+    border: 1px solid #333;
+    border-radius: 6rem;
 }
 
-.input {
-    width: 50%;
+.userAbout {
+    display: flex;
+    gap: 0.3rem;
+    justify-content: center;
+} 
+
+.btnsFirst {
+    display: flex;
+    gap: 3.4rem;
+    justify-items: center;
+
+    margin-top: 2rem; 
+
+    font-size: 0.8rem;
+}
+
+.btnsSecond {
+    display: flex;
+    gap: 4rem;
+
+    margin: 11.5rem auto 1rem;
+
+    justify-items: center;
+    font-size: 0.8rem;
+}
+
+.btnItem {
+    width: 5.5rem;
+    height: 5.5rem;
+    text-align: center;
+}
+
+.btn {
+    display: block;
+    width: 4rem;
+    height: 4rem;
+
+    margin: 0 auto 0.4rem;
+
     border: 1px solid #333;
+    border-radius: 2rem;
+}
+
+.btnItemAlpha {
+    width: 6.5rem;
+    height: 6.5rem;
+    text-align: center;
+}
+.btnAlpha {
+    display: block;
+    width: 5rem;
+    height: 5rem;
+
+    margin: 0 auto 0.5rem;
+    padding: 0 auto;
+
+    border: 1px solid #333;
+    border-radius: 3rem;
+}
+
+.subscription {
+    width: 75%;
+    height: 3rem;
+    border: 1px solid #333;
+    border-radius: 2rem;
+
+    margin: 4rem auto 1rem;
+    padding: 0.8rem 0 0;
+
+    text-align: center;
 }
