--- a/match-app/src/styles/Index.css
+++ b/match-app/src/styles/Index.css
@@ -11,9 +11,13 @@
 }
 
 .App {
-    width: 100%;
+    width: 27%;
     height: 100vh;
-    padding: 5rem;
+    padding: 1rem;
+
+    margin: 0 auto;
+
+    border: 1px solid #333;
 }
 
 .container {
@@ -26,13 +30,39 @@
     border-radius: 1rem;
 }
 
+.containerIn {
+    position: relative;
+    width: 30rem;
+    height: 57rem;
+    margin: 0 auto;
+    padding: 2.5rem;
+    border: 1px solid #333;
+    border-radius: 1rem;
+}
+
+Link {
+    color: #999;
+
+}
+
 .menu {
-    position: absolute;
-    display: flex;
-    gap: 2rem;
-    right: 3rem;
-    top: 1.8rem;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+    width: 30rem;
+    position: fixed;
+    bottom: 0;
+    margin: 0 auto 1rem;
+
     font-size: 1.7rem;
+}
+
+.menuBtn {
+    text-align: center;
+    color: #999;
+}
+
+.menuBtn:hover {
+    color: red;
 }
 
 .btnFiled {
