--- a/match-app/src/styles/Index.css
+++ b/match-app/src/styles/Index.css
@@ -6,14 +6,13 @@
     text-decoration: none;
     outline: none;
     box-sizing: border-box;
-    background-color: rgb(55, 108, 80);
+    background-color: rgb(214, 214, 214);
 
 }
 
 .App {
     width: 27%;
     height: 100vh;
-    padding: 1rem;
 
     margin: 0 auto;
 
@@ -32,12 +31,11 @@
 
 .containerIn {
     position: relative;
-    width: 30rem;
-    height: 57rem;
-    margin: 0 auto;
-    padding: 2.5rem;
-    border: 1px solid #333;
+    width: 100%;
+    height: 55rem;
+    margin: 4.5rem auto 0;
     border-radius: 1rem;
+    border: 1px solid #333;
 }
 
 Link {
@@ -48,12 +46,14 @@ Link {
 .menu {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
-    width: 30rem;
+    width: 31rem;
     position: fixed;
     bottom: 0;
     margin: 0 auto 1rem;
 
     font-size: 1.7rem;
+
+    background: rgb(138, 82, 82);
 }
 
 .menuBtn {
@@ -61,7 +61,8 @@ Link {
     color: #999;
 }
 
-.menuBtn:hover {
+.active {
+    text-align: center;
     color: red;
 }
 
@@ -76,7 +77,7 @@ Link {
 
 /*---------- user ------------------*/
 
-
+/* 
 .userContent {
     display: flex;
     position: relative;
@@ -143,4 +144,4 @@ Link {
     border: 1px solid;
     border-radius: 1rem;
 
-}
+} */
