--- a/match-app/src/Components/top picks/topPicks.module.css
+++ b/match-app/src/Components/top picks/topPicks.module.css
@@ -1,7 +1,22 @@
-.active {
-    display: block;
+
+.content {
+    height: 51rem;
+    display: grid;
+    grid-template-rows: 7% 80% 13%;
+
+    justify-items: center;
 }
 
-.deActive {
-    display: none;
+.main {
+    margin-top: 12rem;
+}
+
+.photo {
+    width: 6rem;
+    height: 6rem;
+
+    margin: 0 auto 2rem;
+
+    border: 1px solid #333;
+    border-radius: 3rem;
 }
