--- a/match-app/src/Pages/Match/Match.module.css
+++ b/match-app/src/Pages/Match/Match.module.css
@@ -1,18 +1,32 @@
-.lists {
-    display: flex;
-    gap: 5rem;
+.tabs {
+    display: grid;
+    grid-template-columns: 33% 0.3% 33% 0.3% 33%;
 
     margin-top: 1rem;
+    padding-bottom: 1rem;
+    justify-items: center;
+    border-bottom: 1px solid rgb(227, 227, 227);
+}
 
-    justify-content: center;
-    border-bottom: 1px solid #333;
+.br {
+    cursor: pointer;
+    border-left: 1px solid rgb(227, 227, 227);
+}
+
+.tab {
+    cursor: pointer;
 }
 
 
+
+
 .active {
-    display: none;
+    display: block;
+
 }
 
 .deActive {
     display: none;
+
+
 }
