--- a/match-app/src/Pages/Profile/Profile.module.css
+++ b/match-app/src/Pages/Profile/Profile.module.css
@@ -12,15 +12,23 @@
     height: 80%;
     margin-top: 3rem;
     padding: 2rem;
+}
+
+.photoBlock {
+    width: 12rem;
+    height: 12rem;
+    margin: 2rem auto;
+
+    overflow: hidden;
+
     border: 1px solid #333;
+    border-radius: 6rem;
+
 }
 
 .photo {
     width: 12rem;
     height: 12rem;
-    margin: 2rem auto;
-    border: 1px solid #333;
-    border-radius: 6rem;
 }
 
 .userAbout {
@@ -89,7 +97,7 @@
     border: 1px solid #333;
     border-radius: 2rem;
 
-    margin: 4rem auto 1rem;
+    margin: 3.5em auto 1rem;
     padding: 0.8rem 0 0;
 
     text-align: center;
