--- a/match-app/src/Pages/Events/Events.module.css
+++ b/match-app/src/Pages/Events/Events.module.css
@@ -1,13 +1,12 @@
-.scroll {
-    overflow: hidden;
-}
+
 
 .firstBlock {
-    overflow: auto;
     width: 100%;
     height: 46rem;
 
     padding: 0.5rem 0 0 0.5rem;
+
+
 
     border: 1px solid #333;
 }
@@ -25,12 +24,14 @@
 .cards {
     display: grid;
     grid-template-columns: 1fr 1fr; 
-}
+    grid-template-rows: 1fr;
+}   
 
 .cardSlim {
     width: 97%;
     height: 20rem;
 
+    position: relative;
 
     margin-top: 0.5rem;
     border-radius: 0.5rem;
