--- a/match-app/src/styles/Index.css
+++ b/match-app/src/styles/Index.css
@@ -17,7 +17,7 @@
     margin: 0 auto;
 
     border: 1px solid #333;
-}
+}   
 
 .container {
     position: relative;
@@ -34,7 +34,8 @@
     width: 100%;
     height: 55rem;
     margin: 4.5rem auto 0;
-    border: 1px solid #333;
+
+    border-radius: 1rem;
 
     overflow: auto;
 }
@@ -78,7 +79,7 @@ Link {
 
 /*---------- user ------------------*/
 
-/* 
+
 .userContent {
     display: flex;
     position: relative;
@@ -145,4 +146,4 @@ Link {
     border: 1px solid;
     border-radius: 1rem;
 
-} */
+} 
