--- a/match-app/src/Pages/Main/Main.module.css
+++ b/match-app/src/Pages/Main/Main.module.css
@@ -1,4 +1,4 @@
-.main {
+.mainActive {
     width: 95%;
     height: 54rem;
 
@@ -6,9 +6,15 @@
     overflow: hidden;
 }
 
-.photoBlock {
-    
+.main {
+    width: 95%;
+    height: 54rem;
+    overflow-y: auto;
+
+
+    margin: 0 auto;
 }
+
 
 .photo {
     width: 486px;
@@ -22,6 +28,14 @@
     margin: -12rem 0 0 2rem ;
     color: #fff;
 } 
+
+.infoOpened {
+
+}
+
+.infoActive {
+    display: none;
+}
 
 .nameAndAge {
     display: flex;
@@ -61,6 +75,7 @@
 }
 
 .btnBlock {
+    display: block;
     margin: -1.5rem 0 0 25rem;
 }
 
@@ -73,31 +88,37 @@
 
     font-size: 1.5rem;
 
+}   
+
+.moreInfoDeActive {
+    display: None;
 }
 
-.btnDown {
-
-}
-
-.btnDown {
+/* .btnDown {
     width: 4rem;
     height: 4rem;
 
+    margin-bottom: 5rem;
+
     border-radius: 1rem;
     background-color: rgb(221, 67, 67);
-}
+} */
 
 .active {
-    margin-top: -30rem;
+    margin-top: -20rem;
 }
 
 /* ======================Button BAR ======================= */
 
-.btnBar {
+.btnBarActive {
     display: flex;
     gap: 0.8rem;
 
     margin: 1rem 0 0 1.5rem;
+}
+
+.btnBarDeActive {
+    display: none;
 }
 
 .btnItem {
@@ -186,6 +207,61 @@
     background: none;
 
 }
+
+
+/* ======================Opened Info ======================= */
+
+.openedInfoAbout {
+}
+
+.openedInfoName {
+    padding-bottom: 0.5rem;
+
+    font-weight: 700;
+    font-size: 1.4rem;
+    
+}
+
+.openedInfoAboutUser {
+    display: grid;
+    gap: 0.4rem;
+    color: #666;
+}
+
+.openedInfoAboutUserCount {
+    display: flex;
+    gap: 0.5rem;
+}
+
+.openedInfoUserAbout {
+    margin: 1rem auto;
+}
+
+.openedInfoUserName {
+    margin-bottom: 1rem;
+    font-size: 1.2rem;
+    font-weight: 700;
+}
+
+.openedInfoUserDescriptionBlock {
+    color: #666;
+}
+
+.openedInfoUserDescription {
+    padding-bottom: 0.5rem;
+}
+
+.openedInfoUserZodiacSign {
+    width: 8rem;
+    height: 1.5rem;
+
+    padding-left: 0.5rem;
+
+    border: 1px solid #666;
+    border-radius: 1rem;
+}
+
+
 
 
 /* ================ More Action =================== */
