--- a/match-app/src/Pages/Main/Main.module.css
+++ b/match-app/src/Pages/Main/Main.module.css
@@ -1,16 +1,15 @@
 .mainActive {
-    width: 95%;
-    height: 54rem;
+    width: 486px;
+    height: 850px;
 
     margin: 0 auto;
-    overflow: hidden;
+
 }
 
 .main {
-    width: 95%;
+    width: 30rem;
     height: 54rem;
-    overflow-y: auto;
-
+    overflow: scroll;
 
     margin: 0 auto;
 }
@@ -19,19 +18,16 @@
 .photo {
     width: 486px;
     height: 850px;
-
+    margin-right: 1rem;
     border-radius: 0.5rem;
 }
 
 .onPhoto {
-
-    margin: -12rem 0 0 2rem ;
+    width: 85%;
+    margin: -12rem auto 0;
     color: #fff;
 } 
 
-.infoOpened {
-
-}
 
 .infoActive {
     display: none;
@@ -112,9 +108,10 @@
 
 .btnBarActive {
     display: flex;
-    gap: 0.8rem;
+    flex: 1;
 
-    margin: 1rem 0 0 1.5rem;
+    margin-top: 1rem;
+    align-items: center;
 }
 
 .btnBarDeActive {
@@ -122,10 +119,18 @@
 }
 
 .btnItem {
-    width: 3.5rem;
-    height: 3.5rem;
+    width: 3rem;
+    height: 3rem;
     text-align: center;
     background: none;
+}
+
+.btnItemAlpha {
+    width: 4rem;
+    height: 4rem;
+    text-align: center;
+    background: none;
+    margin: 0 auto;
 }
 
 .btnOne {
@@ -134,7 +139,6 @@
     height: 3rem;
 
     font-size: 1.5rem;
-    margin: 0 auto 0.4rem;
     background: none;
 
 
@@ -150,7 +154,6 @@
     height: 4rem;
 
     font-size: 2rem;
-    margin: 0 auto 0.5rem;
 
     border: 2px solid rgb(228, 45, 45);
     border-radius: 3rem;
@@ -164,7 +167,6 @@
     height: 3rem;
 
     font-size: 1.5rem;
-    margin: 0 auto 0.4rem;
     background: none;
 
 
@@ -178,7 +180,6 @@
     height: 4rem;
 
     font-size: 2rem;
-    margin: 0 auto 0.5rem;
     padding: 0 auto;
 
     border: 2px solid rgb(120, 232, 130);
@@ -193,98 +194,12 @@
     height: 3rem;
 
     font-size: 1.5rem;
-    margin: 0 auto 0.4rem;
     background: none;
 
 
     border: 2px solid rgb(165, 83, 180);
     border-radius: 2rem;
 }
-.btnItemAlpha {
-    width: 5rem;
-    height: 5rem;
-    text-align: center;
-    background: none;
-
-}
-
-
-/* ======================Opened Info ======================= */
-
-.openedInfoAbout {
-}
-
-.openedInfoName {
-    padding-bottom: 0.5rem;
-
-    font-weight: 700;
-    font-size: 1.4rem;
-    
-}
-
-.openedInfoAboutUser {
-    display: grid;
-    gap: 0.4rem;
-    color: #666;
-}
-
-.openedInfoAboutUserCount {
-    display: flex;
-    gap: 0.5rem;
-}
-
-.openedInfoUserAbout {
-    margin: 1rem auto;
-}
-
-.openedInfoUserName {
-    margin-bottom: 1rem;
-    font-size: 1.2rem;
-    font-weight: 700;
-}
-
-.openedInfoUserDescriptionBlock {
-    color: #666;
-}
-
-.openedInfoUserDescription {
-    padding-bottom: 0.5rem;
-}
-
-.openedInfoUserZodiacSign {
-    width: 8rem;
-    height: 1.5rem;
-
-    padding-left: 0.5rem;
-
-    border: 1px solid #666;
-    border-radius: 1rem;
-}
 
 
 
-
-/* ================ More Action =================== */
-
-
-.shareField {
-    width: 100%;
-    height: 14rem;
-
-    margin-top: 2rem;
-
-    border-top: 1px solid #999;
-    border-bottom: 1px solid #999;
-}
-.shareBtn {
-    width: 100%;
-    height: 2rem;
-    margin-top: 5rem;
-
-    text-align: center;
-}
-
-.share {
-    color: #999;
-    font-size: 1.4rem;
-}
